--- a/game-challenge/sorting/package.json
+++ b/game-challenge/sorting/package.json
@@ -34,6 +34,9 @@
     "raf": "3.4.0",
     "react": "^16.2.0",
     "react-dev-utils": "^5.0.0",
+    "react-dnd": "^2.6.0",
+    "react-dnd-html5-backend": "^2.6.0",
+    "react-dnd-touch-backend": "^0.3.21",
     "react-dom": "^16.2.0",
     "react-dragula": "^1.1.17",
     "style-loader": "0.19.0",
