--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -75,6 +75,10 @@ http {
       server game-challenge-hunt-server:80;
     }
 
+    upstream docker-game-challenge-sorting {
+      server game-challenge-sorting:80;
+    }
+
     upstream docker-game-challenge-phaser-demo {
       server game-challenge-phaser-demo:80;
     }
